# bam_tide

./: .gitignore  Benchmark.md  Cargo.toml  LICENSE  README.md  README_ONT_PREPROCESSING.md  README_initial.md  copy_to_COSMOS.sh
.github/workflows/: book.yml  rust.yml
bench_out/: log_python.txt  python.bedgraph  rust.bedgraph  size_python.txt  size_rust.txt  time_python.txt  time_rust.txt
bench_real_bam_50_count/: log_python.txt  size_python.txt  size_rust.txt  time_python.txt  time_rust.txt
book/: book.toml
book/src/: INTRODUCTION.md  SUMMARY.md
docker/: docker_latest.dev
execuatables/: .gitignore  .~lock.results_pbmc_1k.tsv#  bw-compare  bw-compare.d  python_GL000220.1_flag0.bw  python_GL000220.1_flag256.bw  results_GL000220.1.tsv  rust_GL000220.1_flag2048.bw  rust_GL000220.1_flag256.bw
execuatbles/: bw-compare  debug_scan_exclude_flags.sh  get_big_medium_encode_bam.sh  run_compare.sh  scan_exclude_flags.sh
executables/: .gitignore  bench_bamcoverage.py  bw-compare  describe_bam.sh  get_big_10x_bam.sh  gtf_splice_index  index_and_subset_10x.sh  results_pbmc_1k.tsv
legacy/: .gitignore  BAM_dataset_summary.md  Bam_stats.txt  Cargo.toml  README.md  benchmark.sh  compare_bedgraph_bins.py  diff_result.txt  install.sh  make_sense_of_bench_folder.py  make_test_case.sh  moster_awk_info_bam.sh  uninstall.sh
legacy/bench_out/: python.bedgraph  python.nonzero.bg  rust.bedgraph  rust.nonzero.bg  size_python.txt  size_rust.txt  time_python.txt  time_rust.txt
legacy/src/: atac_to_rna_mapper.rs  data_iter.rs  feature_matcher.rs  mutation_processor.rs
legacy/testData/: .gitignore  _out_bam_coverage.bedgraph  bowtie_chrm_mutated.bam  cmp.tsv  rust.bw  subset.deepTools.bw  (+2 more)
src/: atac_to_rna_mapper.rs  bad_fast_tag_mapper.rs  bam_flag.rs  bed_data.rs  cli.rs  compare_report.rs  data_iter.rs  fast_tag_mapper.rs  feature_matcher.rs  gtf_logics.rs  lib.rs  multi_subset_bam.rs  mutation_processor.rs  ngs_normalizer.rs  normalizer_core.rs  read_data.rs  read_tag_table.rs  results.rs  subset_bam.rs  transcriptome_to_genome.rs
testData/: .gitignore  chrom.sizes  minimal_test.bam  minimal_test.bam.bai  minimal_test.sam  mutation_test.bam  subset.bam  subset.bam.bai
tests/: compare_against_golden_bw.rs  integration_tests.rs  test-bam-quant.rs  test-bam-subset-tag.rs  test-bam2bigwig.rs  test-bam2mut_hist.rs  test-bam_coverage.rs  test-quant-round-trip.rs  test_bam2bedgraph.rs  test_bed_data.rs  test_bowte2mtx.rs
(+78 files in other folders)
