[package]
name = "bam_tide"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bigtools = "0.5.6"
clap = { version = "4.5.56", features = ["derive"] }
rayon = "1.11.0"
rust-htslib = "1.0.0"
tempfile = "3.24.0"
tokio = "1.49.0"

scdata = "0.2.1"
gtf_splice_index = "0.4.0"
mapping_info = "0.1.0"
int_to_str = { package = "stela-int-to-str", version = "0.1.0" }
assert_cmd = "2.1.2"
