[package]
name = "bam_tide"
version = "1.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bigtools = "0.5.6"
clap = { version = "4.5.56", features = ["derive"] }
rayon = "1.11.0"
rust-htslib = "1.0.0"
tempfile = "3.24.0"
tokio = "1.49.0"

#scdata = { git = "https://github.com/stela2502/scdata" }
scdata = { version = "0.2.3", features = ["compare"] }
#gtf_splice_index = "0.4.2"
gtf_splice_index = { path = "../gtf_splice_index" }
mapping_info = "0.1.0"
int_to_str = { package = "stela-int-to-str", version = "0.2.2" }
assert_cmd = "2.1.2"
snp-index = { git = "https://github.com/stela2502/snp-index" }
rand = { version = "0.8", features = ["small_rng"] }
#snp-index = "0.1.0"

[features]
manual-tests = []
manual-snp-tests = ["manual-tests"]
