[package]
name = "bam_tide"
version = "1.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bigtools = "0.5.6"
clap = { version = "4.5.56", features = ["derive"] }
rayon = "1.11.0"
rust-htslib = { git = "https://github.com/stela2502/rust-htslib.git", default-features = false }
tempfile = "3.24.0"
tokio = "1.49.0"

#scdata = { git = "https://github.com/stela2502/scdata" }
scdata = { version = "0.2.3", features = ["compare"] }
#gtf_splice_index = "0.4.2"
#gtf_splice_index = { path = "../gtf_splice_index" }
gtf_splice_index = { git = "https://github.com/stela2502/gtf_splice_index" }
sc_primer = { git = "https://github.com/stela2502/sc_primer"}
fast_tag_mapper = { git= "https://github.com/stela2502/fast_tag_mapper" }


mapping_info = "0.1.0"
int_to_str = { package = "stela-int-to-str", version = "0.2.3" }
assert_cmd = "2.1.2"
snp-index = { git = "https://github.com/stela2502/snp-index" }
rand = { version = "0.8", features = ["small_rng"] }
flate2 = "1.1.9"
csv = "1.4.0"
#snp-index = "0.1.0"

bincode = "1"
serde = { version = "1", features = ["derive"] }
read-tag-table = "0.1.0"

[features]
manual-tests = []
manual-snp-tests = ["manual-tests"]
